# settings-loader-rs

./: .gitignore  AGENTS.md  BEADS_ISSUE_MAPPING.md  CHANGELOG.md  Cargo.toml  PHASE_TRACKING.md  README.md  justfile
.beads/: issues.jsonl
.serena/: project.yml
examples/: provenance_audit.rs  schema_generation.rs
history/: SL-M28_TEST_SUITE_SUMMARY.md  sl-m28_PHASE4_TEST_SUITE_DESIGN.md
ref/: ARCHITECTURE_CONSENSUS.md  ARCHITECTURE_REVIEW_INDEX.md  ARCHITECTURE_UPDATE_EXECUTIVE_SUMMARY.md  FUTURE_ENHANCEMENTS.md  PHASE1_COMPLETION_SUMMARY.md  PHASE1_IMPLEMENTATION_PLAN.md  PHASE2_ENV_CUSTOMIZATION.md  PHASE3_MULTI_SCOPE_SUPPORT.md  PHASE4_CONFIG_EDITING_DESIGN.md  PHASE5_IMPLEMENTATION_PLAN.md  PHASE5_METADATA_ARCHITECTURE.md  PUBLICATION_SUMMARY.md  PUBLISH_QUICK_START.txt  README_ARCHITECTURE_REVIEW_2025.md  V1.0.0_FINAL_CHECKLIST.md  V1.0.0_RELEASE_STATUS.md  VALIDATION_FRAMEWORK_ASSESSMENT.md  architecture-proposal.md  improvement-roadmap.md  sl-0qz-findings.md  sl-0qz-implementation-plan.md  turtle-consolidation.md
resources/: application.yaml  local.yaml  production.yaml
src/: environment.rs  error.rs  introspection.rs  layer.rs  lib.rs  loading_options.rs  metadata.rs  provenance.rs  registry.rs  scope.rs  settings_loader.rs  tracing.rs  validation.rs
src/common/: database.rs  http.rs  mod.rs
src/editor/: config_editor.rs  error.rs  format.rs  json.rs  layer_editor.rs  mod.rs  settings_editor.rs  toml.rs  yaml.rs
src/internals/: case.rs  mod.rs
tests/: config_editor_tests.rs  env_customization_tests.rs  introspection_tests.rs  layer_builder_tests.rs  metadata_core_types_tests.rs  metadata_integration_tests.rs  multi_scope_config_tests.rs  phase2_env_customization_tests.rs  phase3_multi_scope_tests.rs  phase4_config_editing_tests.rs  phase5_1_core_metadata_tests.rs  phase5_2_introspection_tests.rs  phase5_3_property_tests.rs  phase5_3_validation_tests.rs  phase5_4_integration_tests.rs  provenance_tests.rs  registry_tests.rs  schema_export_tests.rs  validation_property_tests.rs  validation_tests.rs
tests/override/: production.yaml
