[package]
name = "settings_loader"
version = "0.14.0"
edition = "2021"
authors = ["Damon Rolfs <drolfs@gmail.com>"]
description = "Opinionated configuration settings load mechanism for Rust applications"
license = "MIT"
repository = "https://github.com/dmrolfs/settings-loader-rs"
homepage = "https://github.com/dmrolfs/settings-loader-rs"
documentation = "https://docs.rs/settings-loader"
readme = "README.md"
keywords = ["configuration", "environment", "env", "settings", "config"]
categories = ["config", "development-tools"]

[lints.rust]
unsafe_code = "forbid"
rust_2018_idioms = { level = "warn", priority = -1 }
rust_2021_compatibility = { level = "warn", priority = -1 }
rust_2021_incompatible_closure_captures = "warn"
rust_2021_prelude_collisions = "warn"

[lints.clippy]
cargo = "warn"
suspicious = "warn"

[workspace]
resolver = "2"

[features]
database = ["sqlx", "secrecy", "zeroize"]
http = ["url"]

[dependencies]
anyhow = "1"
config = { version = ">=0.13", default_features = true }
globwalk = "0.9"
once_cell = "1"
path-absolutize = "3"
secrecy = { version = "0.10", features = ["serde"], optional = true }
serde = { version = "1", features = ["derive"] }
serde_with = { version = "1.14", features = ["chrono", "json", "macros"] }
thiserror = "1"
tracing = "0.1"
tracing-bunyan-formatter = "0.3"
tracing-log = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
sqlx = { version = "0.8", default-features = false, features = ["postgres", "runtime-tokio-rustls"], optional = true }
url = { version = "2.5", optional = true }
zeroize = { version = "1.8", optional = true }

[dev-dependencies]
pretty_assertions = "1"
assert_matches2 = "0.1"
fake = { version = "2.10", features = ["chrono"] }
trim-margin = "0.1.0"
serde_json = "1.0"
serde_yaml = "0.9"
